appId: com.raycatdev.hideandseek.v2
---
- clearState
- runFlow: bootstrap.yaml
- swipe:
      start: "50%,85%"
      end: "50%,45%"
      duration: 500
- tapOn: "Questions"
- waitForAnimationToEnd:
      timeout: 1000
- tapOn: "Add question"
- waitForAnimationToEnd:
      timeout: 1000
- tapOn: "Add thermometer question"
- extendedWaitUntil:
      visible: ".*km"
      timeout: 30000
- assertNotVisible: ".*Pins are too close together.*"
- assertVisible: ".*Hotter.*"
- assertVisible: ".*Colder.*"
- assertVisible: ".*Start.*"
- assertVisible: ".*End.*"
- tapOn: "Hotter answer"
- waitForAnimationToEnd:
      timeout: 1000
- swipe:
      start: "50%,15%"
      end: "50%,85%"
      duration: 500
- takeScreenshot: e2e/artifacts/thermometer-question/thermometer-question-map
